--- a/package.json
+++ b/package.json
@@ -30,6 +30,11 @@
     "jade": "~0.34.1"
   },
   "devDependencies": {
-    "vows": "~0.7.0"
+    "vows": "~0.7.0",
+    "grunt": "~0.4.1",
+    "grunt-contrib-sass": "~0.4.1",
+    "grunt-autoprefixer": "~0.2.20130806",
+    "grunt-contrib-watch": "~0.5.2",
+    "grunt-contrib-cssmin": "~0.6.1"
   }
 }
