Added Leaflet as dependency.

--- a/bower.json
+++ b/bower.json
@@ -10,6 +10,7 @@
     "tests"
   ],
   "dependencies": {
-    "foundation": "git://github.com/zurb/foundation.git#~4.3.1"
+    "foundation": "git://github.com/zurb/foundation.git#~4.3.1",
+    "leaflet": "~0.6.4"
   }
 }
