--- a/package.json
+++ b/package.json
@@ -41,6 +41,8 @@
     "grunt-contrib-watch": "~0.5.2",
     "grunt-contrib-cssmin": "~0.6.1",
     "bower": "~1.1.2",
-    "grunt-cli": "~0.1.9"
+    "grunt-cli": "~0.1.9",
+    "grunt-exec": "~0.4.2",
+    "jake": "~0.6.10"
   }
 }
