allow user-input to setup.js so theres a place to turn on updates

--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "bower": "~1.1.2",
     "grunt-cli": "~0.1.9",
     "grunt-exec": "~0.4.2",
-    "jake": "~0.6.10"
+    "jake": "~0.6.10",
+    "optimist": "~0.6.0"
   }
 }
