--- a/package.json
+++ b/package.json
@@ -30,7 +30,9 @@
   },
   "dependencies": {
     "express": "~3.3.5",
-    "jade": "~0.34.1"
+    "jade": "~0.34.1",
+    "nano": "~4.1.1",
+    "underscore": "~1.5.1"
   },
   "devDependencies": {
     "vows": "~0.7.0",
