--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "grunt-cli": "~0.1.9",
     "grunt-exec": "~0.4.2",
     "jake": "~0.6.10",
-    "grunt-express-server": "~0.4.2"
+    "grunt-express-server": "~0.4.2",
+    "grunt-contrib-uglify": "~0.2.2"
   }
 }
