--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
     "jade": "~0.34.1",
     "nano": "~4.1.1",
     "underscore": "~1.5.1",
-    "optimist": "~0.6.0"
+    "optimist": "~0.6.0",
+    "request": "~2.27.0"
   },
   "devDependencies": {
     "vows": "~0.7.0",
