--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "grunt-exec": "~0.4.2",
     "jake": "~0.6.10",
     "grunt-express-server": "~0.4.2",
-    "grunt-contrib-uglify": "~0.2.2"
+    "grunt-contrib-uglify": "~0.2.2",
+    "grunt-contrib-copy": "~0.4.1"
   }
 }
