--- a/bower.json
+++ b/bower.json
@@ -9,9 +9,13 @@
     "test",
     "tests"
   ],
-  "dependencies": {
+  "devDependencies": {
+    "backbone": "~1.0.0",
     "foundation": "git://github.com/zurb/foundation.git#~4.3.1",
     "leaflet": "~0.6.4",
-    "jquery": "~2.0.3"
+    "jquery": "~2.0.3",
+    "lodash": "~1.3.1",
+    "jsts": "https://github.com/bjornharrtell/jsts.git#~0.13.2",
+    "proj4js": "~1.3.1"
   }
 }
