--- a/bower.json
+++ b/bower.json
@@ -16,6 +16,7 @@
     "jquery": "~2.0.3",
     "lodash": "~1.3.1",
     "jsts": "https://github.com/bjornharrtell/jsts.git#~0.13.2",
-    "proj4js": "~1.3.1"
+    "proj4js": "~1.3.1",
+    "jade": "~0.35.0"
   }
 }
