--- a/bower.json
+++ b/bower.json
@@ -18,5 +18,8 @@
     "jsts": "https://github.com/bjornharrtell/jsts.git#~0.13.2",
     "proj4js": "~1.3.1",
     "jade": "~0.35.0"
+  },
+  "dependencies": {
+    "async": "~0.2.5"
   }
 }
