--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "jake": "~0.6.10",
     "grunt-express-server": "~0.4.2",
     "grunt-contrib-uglify": "~0.2.2",
-    "grunt-contrib-jade": "~0.8.0"
+    "grunt-contrib-jade": "~0.8.0",
+    "grunt-exec": "~0.4.2"
   }
 }
